# video_poc

./: README.md  pyproject.toml
scripts/: deploy_all.sh
services/01_url_pull/: __init__.py  main.py
